Frontend/pages/Productpage/Productpage.css
.product-page {
    display: flex;
    flex-direction: column;
    height: 95%;
    width: 98%;
    border: 2px solid rgb(230, 230, 230);
    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
    border-radius: 20px;
    margin: 20px;
}

.product-container {
    display: flex;
    flex: 3;
    flex-direction: row;
}

.image-container {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: center;
    text-align: center;
}


.product-info-container hr {
    width: 50%;
    border: none;
    height: 2px;
    background-color: rgb(234, 234, 234);
    margin: 15px 0;
}


.product-info-container {
    display: flex;
    flex-direction: column;
    flex: 1;
    border-left: 2px solid rgb(234, 234, 234);
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: 20px;
    gap: 15px;
}

.quantity-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    text-align: center;
    gap: 10px;
}

.quantity-container h3 {
    font-size: 1.2rem;
    color: #555;
    margin: 0;
}

.quantity-container input {
    width: 60px;
    padding: 8px;
    font-size: 1rem;
    border: 1px solid rgb(200, 200, 200);
    border-radius: 5px;
    text-align: center;
}

.add-to-cart {
    background-color: #004084;
    color: #ffffff;
    font-size: 1rem;
    padding: 10px 15px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease, transform 0.2s ease;
    width: 80%;
}

.add-to-cart:hover {
    background-color: rgb(44, 62, 80);
    transform: translateY(-2px);
}

.add-to-cart:active {
    transform: translateY(1px);
}

.similar-products {
    border-top: 2px solid rgb(234, 234, 234);
    display: flex;
    flex-direction: column;
    padding-top: 10px;
    flex: 1.3;
    overflow: hidden;
}

.title-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.similar-products-container {
    display: flex;
    flex-direction: row;
    gap: 20px;
    text-align: center;
    overflow-x: auto;
    overflow-y: hidden;
    padding: 10px;
    height: 100%;
}

.similar-products-container > * {
    flex-shrink: 0; /* Prevent cards from shrinking */
    height: 100%; /* Match the height of the parent container */
    max-height: 100%; /* Ensure they don't exceed the parent container's height */
    display: flex;
    justify-content: center;
    align-items: center;
}

.image-gallery {
    padding: 30px;
}

